syntax = "proto3";

option csharp_namespace = "GraphML.RPC";

import "RepositoryItem.proto";

message Edge
{
  RepositoryItem base = 1;
  
  // Edge
  string sourceId = 2;
  string targetId = 3;
}

